@@ -1,10 +1,15 @@
 package com.meetingsummary.meeting_summary_agent.service;
 
-
 import org.springframework.stereotype.Service;
 
 @Service
 public class MeetingAnalysisService {
+
+    private final GeminiService geminiService;
+
+    public MeetingAnalysisService(GeminiService geminiService) {
+        this.geminiService = geminiService;
+    }
 
     public String generateSummary(String notes) {
 
@@ -12,101 +17,102 @@ public class MeetingAnalysisService {
             return "No meeting notes available.";
         }
 
-        if (notes.length() <= 250) {
-            return notes;
-        }
+        String prompt = """
+                You are a professional meeting assistant.
 
-        return notes.substring(0, 250) + "...";
+                Summarize the following meeting notes in a concise and professional way.
+
+                Requirements:
+                - Provide only the meeting summary.
+                - Focus on the main topics discussed.
+                - Mention important outcomes.
+                - Do not add information that is not present in the meeting notes.
+                - Keep the summary clear and concise.
+
+                Meeting Notes:
+                %s
+                """.formatted(notes);
+
+        return geminiService.generateContent(prompt);
     }
 
     public String extractDiscussionPoints(String notes) {
 
-        StringBuilder builder = new StringBuilder();
-
-        String[] lines = notes.split("\\.");
-
-        int count = 1;
-
-        for (String line : lines) {
-
-            if (!line.trim().isEmpty()) {
-
-                builder.append(count++)
-                        .append(". ")
-                        .append(line.trim())
-                        .append("\n");
-            }
-
-            if (count > 5)
-                break;
+        if (notes == null || notes.isBlank()) {
+            return "No discussion points found.";
         }
 
-        return builder.toString();
+        String prompt = """
+                You are a professional meeting assistant.
+
+                Extract the key discussion points from the following meeting notes.
+
+                Requirements:
+                - Return only the important discussion points.
+                - Use a numbered list.
+                - Keep each point concise.
+                - Do not invent information.
+                - Include only topics that were actually discussed.
+
+                Meeting Notes:
+                %s
+                """.formatted(notes);
+
+        return geminiService.generateContent(prompt);
     }
 
     public String extractDecisions(String notes) {
 
-        StringBuilder builder = new StringBuilder();
-
-        String[] lines = notes.split("\\.");
-
-        int count = 1;
-
-        for (String line : lines) {
-
-            String lower = line.toLowerCase();
-
-            if (lower.contains("decided")
-                    || lower.contains("approved")
-                    || lower.contains("agreed")
-                    || lower.contains("finalized")) {
-
-                builder.append(count++)
-                        .append(". ")
-                        .append(line.trim())
-                        .append("\n");
-            }
-
-        }
-
-        if (builder.length() == 0) {
+        if (notes == null || notes.isBlank()) {
             return "No decisions found.";
         }
 
-        return builder.toString();
+        String prompt = """
+                You are a professional meeting assistant.
+
+                Identify the important decisions made during the following meeting.
+
+                Requirements:
+                - Return only decisions that were actually made.
+                - Use a numbered list.
+                - Keep each decision concise.
+                - Do not confuse discussion topics with final decisions.
+                - Do not invent any decisions.
+                - If there are no clear decisions, return exactly:
+                  No decisions found.
+
+                Meeting Notes:
+                %s
+                """.formatted(notes);
+
+        return geminiService.generateContent(prompt);
     }
 
     public String extractActionItems(String notes) {
 
-        StringBuilder builder = new StringBuilder();
-
-        String[] lines = notes.split("\\.");
-
-        int count = 1;
-
-        for (String line : lines) {
-
-            String lower = line.toLowerCase();
-
-            if (lower.contains("will")
-                    || lower.contains("must")
-                    || lower.contains("complete")
-                    || lower.contains("finish")
-                    || lower.contains("assign")) {
-
-                builder.append(count++)
-                        .append(". ")
-                        .append(line.trim())
-                        .append("\n");
-            }
-
-        }
-
-        if (builder.length() == 0) {
+        if (notes == null || notes.isBlank()) {
             return "No action items found.";
         }
 
-        return builder.toString();
-    }
+        String prompt = """
+                You are a professional meeting assistant.
 
+                Extract all action items from the following meeting notes.
+
+                Requirements:
+                - Return the action items as a numbered list.
+                - Include the responsible person if mentioned.
+                - Include the task or responsibility.
+                - Include the deadline if mentioned.
+                - Do not invent names, tasks, or deadlines.
+                - Include only tasks that require an action after the meeting.
+                - If there are no action items, return exactly:
+                  No action items found.
+
+                Meeting Notes:
+                %s
+                """.formatted(notes);
+
+        return geminiService.generateContent(prompt);
+    }
 }
